
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;
typedef int uint32_t ;



__attribute__((used)) static void poke_byte(volatile uint32_t *m, uint32_t ofs, uint8_t val)
{
  uint32_t i = (ofs & 3) * 8;
  ofs >>= 2;
  m[ofs] = (m[ofs] & ~(0xff << i)) | (val << i);
}
